--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -4,7 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
-  - ./namespace.yaml
   - ../../templates/alerts
   # Flux-Kustomizations
   - ./cilium/ks.yaml
@@ -17,11 +16,13 @@ resources:
   - ./reloader/ks.yaml
   - ./spegel/ks.yaml
   # - ./talos-debug-tools/ks.yaml
-transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: not-used
-      namespace: kube-system
-    unsetOnly: true
+components:
+  - ../../flux/components/namespace
+patches:
+  - # Add the name to the namespace.
+    patch: |
+      - op: add
+        path: /metadata/name
+        value: cert-manager
+    target:
+      kind: Namespace
