--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -4,18 +4,19 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
-  - ./namespace.yaml
   - ../../templates/alerts
   # Flux-Kustomizations
   - ./cloudflared/ks.yaml
   - ./echo-server/ks.yaml
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
-transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: not-used
-      namespace: network
-    unsetOnly: true
+components:
+  - ../../flux/components/namespace
+patches:
+  - # Add the name to the namespace.
+    patch: |
+      - op: add
+        path: /metadata/name
+        value: cert-manager
+    target:
+      kind: Namespace
