--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -4,7 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
-  - ./namespace.yaml
   - ../../templates/alerts
   # Flux-Kustomizations
   - ./exporters
@@ -16,11 +15,13 @@ resources:
   - ./promtail/ks.yaml
   - ./silence-operator/ks.yaml
   - ./unpoller/ks.yaml
-transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: not-used
-      namespace: observability
-    unsetOnly: true
+components:
+  - ../../flux/components/namespace
+patches:
+  - # Add the name to the namespace.
+    patch: |
+      - op: add
+        path: /metadata/name
+        value: cert-manager
+    target:
+      kind: Namespace
