--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -4,7 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
-  - ./namespace.yaml
   - ../../templates/alerts
   # Flux-Kustomizations
   - ./dokuwiki/ks.yaml
@@ -12,11 +11,13 @@ resources:
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
   - ./searxng/ks.yaml
-transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: not-used
-      namespace: self-hosted
-    unsetOnly: true
+components:
+  - ../../flux/components/namespace
+patches:
+  - # Add the name to the namespace.
+    patch: |
+      - op: add
+        path: /metadata/name
+        value: cert-manager
+    target:
+      kind: Namespace
