--- a/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -21,7 +21,7 @@ instance:
   kustomize:
     kustomize:
     patches:
-      # Add Sops decryption to Kustomizations.
+      # Add SOPS decryption to Kustomizations.
       - patch: |
           - op: add
             path: /spec/decryption
@@ -44,6 +44,7 @@ instance:
         target:
           kind: Deployment
           name: (kustomize-controller|helm-controller|source-controller)
+      # Increase the memory limits.
       - patch: |
           apiVersion: apps/v1
           kind: Deployment
