--- a/kubernetes/flux/components/gatus/guarded/configmap.yaml
+++ b/kubernetes/flux/components/gatus/guarded/configmap.yaml
@@ -1,19 +1,15 @@
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: "${APP}-gatus-guarded-ep"
-  labels:
-    gatus.io/enabled: "true"
-data:
-  config.yaml: |
-    endpoints:
-      - name: "${APP}"
-        group: guarded
-        url: "https://${GATUS_SUBDOMAIN:-${APP}}.${SECRET_DOMAIN}${GATUS_PATH:-/}"
-        interval: 1m
-        conditions:
-          - "[STATUS] == ${GATUS_STATUS:-200}"
-          - "[BODY] == pat(*auth.${SECRET_DOMAIN}*)"
-        alerts:
-          - type: pushover
+endpoints:
+  - name: "${APP}"
+    group: guarded
+    url: 1.1.1.1
+    interval: 1m
+    ui:
+      hide-hostname: true
+      hide-url: true
+    dns:
+      query-name: "${GATUS_SUBDOMAIN:-${APP}}.${SECRET_DOMAIN}"
+      query-type: A
+    conditions:
+      - "len([BODY]) == 0"
+    alerts:
+      - type: pushover
