--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -2,22 +2,22 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+resources: []
   # Pre Flux-Kustomizations
-  - ./priorityclass.yaml
+  # - ./priorityclass.yaml
   # Flux-Kustomizations
-  - ./audiobookshelf/ks.yaml
-  - ./bazarr/ks.yaml
-  - ./jellyfin/ks.yaml
-  - ./jellyseerr/ks.yaml
-  - ./jellystat/ks.yaml
-  - ./lidarr/ks.yaml
-  - ./navidrome/ks.yaml
-  - ./prowlarr/ks.yaml
-  - ./radarr/ks.yaml
-  - ./recyclarr/ks.yaml
-  - ./sonarr/ks.yaml
-  - ./unpackerr/ks.yaml
+  # - ./audiobookshelf/ks.yaml
+  # - ./bazarr/ks.yaml
+  # - ./jellyfin/ks.yaml
+  # - ./jellyseerr/ks.yaml
+  # - ./jellystat/ks.yaml
+  # - ./lidarr/ks.yaml
+  # - ./navidrome/ks.yaml
+  # - ./prowlarr/ks.yaml
+  # - ./radarr/ks.yaml
+  # - ./recyclarr/ks.yaml
+  # - ./sonarr/ks.yaml
+  # - ./unpackerr/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
