--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -2,13 +2,13 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./dokuwiki/ks.yaml
-  - ./hoarder/ks.yaml
-  - ./immich/ks.yaml
-  - ./immich-folder-album-creator/ks.yaml
-  - ./searxng/ks.yaml
+  # - ./dokuwiki/ks.yaml
+  # - ./hoarder/ks.yaml
+  # - ./immich/ks.yaml
+  # - ./immich-folder-album-creator/ks.yaml
+  # - ./searxng/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
