--- a/kubernetes/apps/security/kustomization.yaml
+++ b/kubernetes/apps/security/kustomization.yaml
@@ -4,10 +4,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Flux-Kustomizations
-  - ./authelia/ks.yaml
+  # - ./authelia/ks.yaml
   - ./cert-manager/ks.yaml
   - ./external-secrets/ks.yaml
-  - ./glauth/ks.yaml
+  # - ./glauth/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
