--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -2,9 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
+resources:
   # Flux-Kustomizations
-  # - ./democratic-csi/ks.yaml
+  - ./democratic-csi/ks.yaml
   # - ./minio/ks.yaml
   # - ./openebs/ks.yaml
   # - ./snapshot-controller/ks.yaml
