--- a/kubernetes/flux/components/alerts/alert.yaml
+++ b/kubernetes/flux/components/alerts/alert.yaml
@@ -3,10 +3,10 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
 metadata:
-  name: alertmanager
+  name: alert-manager
 spec:
   providerRef:
-    name: alertmanager
+    name: alert-manager
   eventSeverity: error
   eventSources:
     - kind: FluxInstance
