--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./democratic-csi/ks.yaml
   # - ./minio/ks.yaml
   # - ./openebs/ks.yaml
-  # - ./snapshot-controller/ks.yaml
+  - ./snapshot-controller/ks.yaml
   # - ./volsync/ks.yaml
 components:
   # - ../../flux/components/alerts
