--- a/kubernetes/apps/network/echo-server/ks.yaml
+++ b/kubernetes/apps/network/echo-server/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../flux/components/gatus/external
+    - ../../../../flux/components/gatus/external
   path: ./kubernetes/apps/network/echo-server/app
   prune: true
   sourceRef:
