--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
-  # - ./dragonfly/ks.yaml
+  - ./dragonfly/ks.yaml
   - ./pgadmin/ks.yaml
   # - ./postgres-backup/ks.yaml
 components:
