--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./cloudnative-pg/ks.yaml
   - ./dragonfly/ks.yaml
   - ./pgadmin/ks.yaml
-  # - ./postgres-backup/ks.yaml
+  - ./postgres-backup/ks.yaml
 components:
   # - ../../flux/components/alerts
   - ../../flux/components/namespace
