--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - ./radarr/ks.yaml
   # - ./recyclarr/ks.yaml
   - ./sonarr/ks.yaml
-  # - ./unpackerr/ks.yaml
+  - ./unpackerr/ks.yaml
 components:
   # - ../../flux/components/alerts
   - ../../flux/components/namespace
