--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -2,6 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-system
 resources:
   # Flux-Kustomizations
   - ./cilium/ks.yaml
@@ -15,7 +16,7 @@ resources:
   - ./spegel/ks.yaml
   # - ./talos-debug-tools/ks.yaml
 components:
-  # - ../../flux/components/alerts
+  - ../../flux/components/alerts
   - ../../flux/components/namespace
 patches:
   - # Add the name to the namespace.
