--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -2,6 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: media
 resources:
   # Pre Flux-Kustomizations
   - ./priorityclass.yaml
@@ -19,7 +20,7 @@ resources:
   - ./sonarr/ks.yaml
   - ./unpackerr/ks.yaml
 components:
-  # - ../../flux/components/alerts
+  - ../../flux/components/alerts
   - ../../flux/components/namespace
 patches:
   - # Add the name to the namespace.
