--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -2,6 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: observability
 resources:
   # Flux-Kustomizations
   # - ./exporters
@@ -14,7 +15,7 @@ resources:
   # - ./silence-operator/ks.yaml
   # - ./unpoller/ks.yaml
 components:
-  # - ../../flux/components/alerts
+  - ../../flux/components/alerts
   - ../../flux/components/namespace
 patches:
   - # Add the name to the namespace.
