--- a/kubernetes/apps/download/kustomization.yaml
+++ b/kubernetes/apps/download/kustomization.yaml
@@ -6,8 +6,8 @@ namespace: download
 resources:
   # Flux-Kustomizations
   - ./flaresolverr/ks.yaml
-  - ./pinchflat/ks.yaml
-  - ./qbittorrent/ks.yaml
+  # - ./pinchflat/ks.yaml
+  # - ./qbittorrent/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
