--- a/kubernetes/apps/utilities/kustomization.yaml
+++ b/kubernetes/apps/utilities/kustomization.yaml
@@ -3,12 +3,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: utilities
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./atuin/ks.yaml
-  - ./cyberchef/ks.yaml
-  - ./it-tools/ks.yaml
-  - ./jsoncrack/ks.yaml
+  # - ./atuin/ks.yaml
+  # - ./cyberchef/ks.yaml
+  # - ./it-tools/ks.yaml
+  # - ./jsoncrack/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
